cp: 	PR c++/9629 	* cp-tree.h (struct language_function): Add in_base_initializer. 	(in_base_initializer): define it. 	(expand_member_init): Remove INIT param. 	* init.c (expand_member_init): Remove INIT param, return the member. 	(emit_mem_initializers): Set in_base_initializer. 	* class.c (build_base_path): Check in_base_initializer. 	* parser.c (cp_parser_mem_initializer): Set in_base_initializer. 	* pt.c (tsubst_initializer_list): Likewise. testsuite: 	PR c++/9629 	* g++.dg/init/ctor2.C: New test.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@64438 138bc75d-0d04-0410-961f-82ee72b054a4